--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 chrono = "0.4"
+dirs = "5"
 native-tls = "0.2"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12", features = ["native-tls"] }
