--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ dirs = "5"
 native-tls = "0.2"
 tokio = { version = "1", features = ["full"] }
 reqwest = { version = "0.12", features = ["native-tls"] }
+tokio-cron-scheduler = "0.10"
 
