--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ chrono = "0.4"
 dirs = "5"
 native-tls = "0.2"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.12", features = ["native-tls"] }
+reqwest = { version = "0.12", features = ["native-tls", "json"] }
+serde_json = "1.0"
 tokio-cron-scheduler = "0.10"
 
